--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -7,7 +6,10 @@
   height: 100vh;
   background: #f9a877;
   background: linear-gradient(
-157deg, rgba(249, 168, 119, 0.9) 0%, #fff4d8 100%);
+    157deg,
+    rgba(249, 168, 119, 0.9) 0%,
+    #fff4d8 100%
+  );
   overflow: auto;
 }
 
@@ -19,7 +21,7 @@
   margin-bottom: 4px;
 }
 .Instructions em {
-  color:#333;
+  color: #333;
   font-weight: 700;
 }
 .Instructions code {
@@ -47,11 +49,8 @@
 }
 
 .Implementation {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex: 1;
-  height: 100%;
+  position: absolute;
+  left: 50%;
 }
 
 .Placeholder {
@@ -64,12 +63,12 @@
   text-align: center;
 }
 .Placeholder::before {
-  content: 'Placeholder';
+  content: "Placeholder";
   position: absolute;
   top: 5px;
   left: 5px;
   padding: 2px 5px;
-  background-color:rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   color: #000;
   border-radius: 2px;
   font-style: normal;
@@ -77,8 +76,10 @@
 
 .Trigger {
   margin: 20px auto;
+  display: flex;
 }
 .Trigger > button {
+  display: flex;
   padding: 10px 15px;
   font-size: 18px;
 }
@@ -94,4 +95,7 @@
 }
 .Output > p:last-child {
   font-style: italic;
+}
+.triggered {
+  padding: 30px;
 }
